# smithy-rs

./: CHANGELOG.next.toml  Pipfile  README.md  build.gradle.kts  gradle.properties  make-recording.sh  protocol_test.py  record.py  settings.gradle.kts  test.py  test.sh
aws/: SDK_CHANGELOG.md  SDK_CHANGELOG.next.json
aws-sdk/: Cargo.toml  index.md
aws-sdk/aws-config/: Cargo.toml
aws-sdk/aws-endpoint/: Cargo.toml
aws-sdk/aws-http/: Cargo.toml
aws-sdk/aws-hyper/: Cargo.toml
aws-sdk/aws-sig-auth/: Cargo.toml
aws-sdk/aws-sigv4/: Cargo.toml
aws-sdk/aws-smithy-client/: Cargo.toml
aws-sdk/aws-smithy-eventstream/: Cargo.toml
aws-sdk/aws-smithy-http/: Cargo.toml
aws-sdk/aws-smithy-http-tower/: Cargo.toml
aws-sdk/aws-smithy-json/: Cargo.toml
aws-sdk/aws-smithy-query/: Cargo.toml
aws-sdk/aws-smithy-xml/: Cargo.toml
aws-sdk/aws-types/: Cargo.toml
aws-sdk/config/: Cargo.toml
aws-sdk/config/src/: error.rs  input.rs
aws-sdk/dynamodb/: Cargo.toml
aws-sdk/dynamodb/src/: error.rs  input.rs  model.rs
aws-sdk/ec2/: Cargo.toml
aws-sdk/ec2/src/: client.rs
aws-sdk/examples/ses/: Cargo.toml
aws-sdk/examples/using_native_tls_instead_of_rustls/: Cargo.toml
aws-sdk/glacier/: Cargo.toml  README.md
aws-sdk/glacier/src/: error.rs  input.rs  operation_deser.rs  operation_ser.rs
aws-sdk/iam/: Cargo.toml
aws-sdk/iam/src/: error.rs  input.rs
aws-sdk/kms/: Cargo.toml
aws-sdk/kms/src/: error.rs  input.rs
aws-sdk/polly/: Cargo.toml
aws-sdk/polly/src/: error.rs  input.rs
aws-sdk/qldbsession/: Cargo.toml
aws-sdk/qldbsession/src/: error.rs  input.rs
aws-sdk/s3/: Cargo.toml
aws-sdk/s3/src/: error.rs  input.rs  model.rs  operation.rs
aws-sdk/sdk/aws-config/: Cargo.toml
aws-sdk/sdk/aws-endpoint/: Cargo.toml
aws-sdk/sdk/aws-http/: Cargo.toml
aws-sdk/sdk/aws-hyper/: Cargo.toml
aws-sdk/sdk/aws-sig-auth/: Cargo.toml
aws-sdk/sdk/aws-sigv4/: Cargo.toml
aws-sdk/sdk/aws-smithy-async/: Cargo.toml
aws-sdk/sdk/aws-smithy-client/: Cargo.toml
aws-sdk/sdk/aws-smithy-eventstream/: Cargo.toml
aws-sdk/sdk/aws-smithy-http/: Cargo.toml
aws-sdk/sdk/aws-smithy-http-tower/: Cargo.toml
aws-sdk/sdk/aws-smithy-json/: Cargo.toml
aws-sdk/sdk/aws-smithy-protocol-test/: Cargo.toml
aws-sdk/sdk/aws-smithy-query/: Cargo.toml
aws-sdk/sdk/aws-smithy-types/: Cargo.toml
aws-sdk/sdk/aws-smithy-types-convert/: Cargo.toml
aws-sdk/sdk/aws-smithy-xml/: Cargo.toml
aws-sdk/sdk/aws-types/: Cargo.toml
aws-sdk/sdk/config/: Cargo.toml  README.md
aws-sdk/sdk/config/src/: lib.rs
aws-sdk/sdk/dynamodb/: Cargo.toml  README.md
aws-sdk/sdk/dynamodb/src/: client.rs  lib.rs
aws-sdk/sdk/ec2/: Cargo.toml  README.md
aws-sdk/sdk/ec2/src/: client.rs  lib.rs
aws-sdk/sdk/glacier/: Cargo.toml  README.md
aws-sdk/sdk/glacier/src/: lib.rs
aws-sdk/sdk/iam/: Cargo.toml  README.md
aws-sdk/sdk/iam/src/: lib.rs
aws-sdk/sdk/kms/: Cargo.toml  README.md
aws-sdk/sdk/kms/src/: lib.rs
aws-sdk/sdk/polly/: Cargo.toml  README.md
aws-sdk/sdk/polly/src/: lib.rs
aws-sdk/sdk/qldbsession/: Cargo.toml  README.md
aws-sdk/sdk/qldbsession/src/: lib.rs
aws-sdk/sdk/s3/: Cargo.toml  README.md
aws-sdk/sdk/s3/src/: client.rs  input.rs  lib.rs  operation.rs
aws-sdk/sdk/s3control/: Cargo.toml  README.md
aws-sdk/sdk/s3control/src/: client.rs  lib.rs
aws-sdk/sdk/sts/: Cargo.toml  README.md
aws-sdk/sdk/sts/src/: client.rs  lib.rs
aws-sdk/sdk/transcribestreaming/: Cargo.toml  README.md
aws-sdk/sdk/transcribestreaming/src/: client.rs  lib.rs
aws-sdk/sts/: Cargo.toml
aws-sdk/sts/src/: error.rs  input.rs
aws-sdk/transcribestreaming/: Cargo.toml
aws-sdk/transcribestreaming/src/: client.rs  error.rs  input.rs  model.rs
aws/rust-runtime/aws-http/: Cargo.toml
aws/rust-runtime/aws-hyper/: Cargo.toml
aws/rust-runtime/aws-hyper/src/: conn.rs  lib.rs
aws/rust-runtime/aws-inlineable/: Cargo.toml
aws/rust-runtime/integration-test-helper/: Cargo.toml
aws/rust-runtime/integration-test-helper/src/: lib.rs
aws/sdk/: build.gradle.kts
aws/sdk-codegen/: build.gradle.kts
aws/sdk/aws-models/: backup.json  s3-tests.smithy  s3.json
aws/sdk/models/: dynamodb.test.json
aws/smithy-aws-e2e-test-traits/: build.gradle.kts
codegen/: build.gradle.kts
codegen-endpoints/: build.gradle.kts
codegen-server/: build.gradle.kts
codegen-server-test/: build.gradle.kts
codegen-server-test/model/: pokemon.smithy
codegen-server-test/python/model/: pokemon.smithy
codegen-server/python/: build.gradle.kts
rust-runtime/: Cargo.toml  build.gradle.kts
rust-runtime/aws-smithy-checksums/: Cargo.toml
rust-runtime/aws-smithy-checksums/src/: body.rs  lib.rs
rust-runtime/aws-smithy-checksums/tests/: streaming_data.rs
rust-runtime/aws-smithy-client/src/: bounds.rs  builder.rs  erase.rs  lib.rs  static_tests.rs
rust-runtime/aws-smithy-eventstream/src/: frame.rs
rust-runtime/aws-smithy-http/: Cargo.toml
rust-runtime/aws-smithy-http-server/: Cargo.toml
rust-runtime/aws-smithy-http-server/examples/: Cargo.toml
rust-runtime/aws-smithy-http-server/examples/pokemon_client/: Cargo.toml
rust-runtime/aws-smithy-http-server/examples/pokemon_client/src/: main.rs
rust-runtime/aws-smithy-http-server/examples/pokemon_service/src/: lib.rs
rust-runtime/aws-smithy-http-server/examples/pokemon_service/tests/: simple_integration_test.rs
rust-runtime/aws-smithy-http-server/src/: body.rs  lib.rs  macros.rs  rejection.rs  server.rs
rust-runtime/aws-smithy-http-server/src/server/: mod.rs  tls.rs
rust-runtime/aws-smithy-http-server/src/tests/certs/: certificate.pem  key.pem
rust-runtime/aws-smithy-http-tower/src/: dispatch.rs  parse_response.rs
rust-runtime/aws-smithy-http/src/: body.rs  byte_stream.rs  endpoint.rs  event_stream.rs  header.rs  lib.rs  operation.rs  result.rs
rust-runtime/aws-smithy-types/: Cargo.toml
rust-runtime/aws-smithy-types/src/: base64.rs
rust-runtime/smithy-http/src/: operation.rs
server-test/: Cargo.toml
tests/invalid-response/: 0.protocolTest.json  0.response.json
tests/list-tables/: 0.request.json  0.response.json
(+113 files in other folders)
