[package]
name = "aws-hyper"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["test-util"]
test-util = ["protocol-test-helpers"]
client-impl = ["hyper/client", "hyper/http1", "hyper/http2", "hyper/runtime", "hyper-tls"]
retries = ["tokio/time"]

[dependencies]
hyper = { version = "0.14.2" }
tower = { version = "0.4.6", features = ["util", "retry"] }
hyper-tls = { version = "0.5.0", optional = true }
aws-auth = { path = "../aws-auth" }
aws-sig-auth = { path = "../aws-sig-auth" }
aws-endpoint = { path = "../aws-endpoint" }
aws-http = { path = "../aws-http" }
http = "0.2.3"
bytes = "1"
http-body = "0.4.0"
smithy-http = { path = "../../../rust-runtime/smithy-http" }
smithy-types = { path = "../../../rust-runtime/smithy-types" }
smithy-http-tower = { path = "../../../rust-runtime/smithy-http-tower" }
fastrand = "1.4.0"
tokio = { version = "1", optional = true }

pin-project = "1"
tracing = "0.1.25"

protocol-test-helpers = { path = "../../../rust-runtime/protocol-test-helpers", optional = true }

[dev-dependencies]
# for reasons that are unclear, this leaks into regular builds
# tokio = { version = "1", features = ["full", "test-util"] }
tower-test = "0.4.0"
aws-types = { path = "../aws-types" }
