[package]
name = "integration-test-helper"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.4"
smithy-http = { path = "../../../rust-runtime/smithy-http" }
http = "0.2.3"
hyper = "0.14"
