[package]
name = "pokemon_client"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust client to retrieve information about and capture Pokémon."

[dependencies]
async-stream = "0.3"
clap = { version = "~3.2.1", features = ["derive"] }
hyper = {version = "0.14", features = ["server"] }
rand = "0.8"
tokio = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local paths
aws-smithy-client  = { path = "../../../aws-smithy-client/", features = ["rustls"] }
pokemon_service_client = { path = "../pokemon_service_client/" }

[dev-dependencies]
assert_cmd = "2.0"
home = "0.5"
wrk-api-bench = "0.0.7"
